# EnhancedHalfLife

./: .gitignore
src/game/: CMakeLists.txt  EHLGame.natvis  cpp.hint
src/game/client/: CMakeLists.txt  cl_dll.h  cl_dll.hpp  cl_util.h  cl_util.hpp  client_precompiled.hpp  com_weapons.cpp  com_weapons.h  com_weapons.hpp  demo.cpp  demo.h  demo.hpp  entity.cpp  ev_common.cpp  ev_hldm.cpp  ev_hldm.h  events.cpp  eventscripts.h  eventscripts.hpp  global_consts.h  hud.h  hud_redraw.cpp  input.cpp  interpolation.cpp  interpolation.h  interpolation.hpp  player_info.h  player_info.hpp  tf_defs.h  util.cpp  view.cpp  view.h  wrect.hpp
src/game/client/client_interface/: Exports.h  Exports.hpp  cdll_int.cpp
src/game/client/hl/: hl_baseentity.cpp  hl_events.cpp  hl_objects.cpp  hl_weapons.cpp
src/game/client/input/: camera.h  camera.hpp  in_camera.cpp  input.cpp  inputw32.cpp  kbutton.h
src/game/client/rendering/: GameStudioModelRenderer.cpp  GameStudioModelRenderer.h  GameStudioModelRenderer.hpp  StudioModelRenderer.cpp  StudioModelRenderer.h  StudioModelRenderer.hpp  studio_util.h  tri.cpp  tri.hpp
src/game/client/ui/: voice_status.cpp  voice_status.h  voice_status.hpp
src/game/client/ui/hud/: ammo.cpp  ammo.h  ammo.hpp  ammohistory.cpp  ammohistory.h  ammohistory.hpp  battery.cpp  death.cpp  flashlight.cpp  geiger.cpp  health.cpp  health.h  health.hpp  hud.cpp  hud.h  hud.hpp  hud_msg.cpp  hud_redraw.cpp  hud_spectator.cpp  hud_spectator.h  hud_spectator.hpp  hud_update.cpp  menu.cpp  message.cpp  saytext.cpp  status_icons.cpp  statusbar.cpp  text_message.cpp  train.cpp
src/game/client/ui/vgui/: vgui_ClassMenu.cpp  vgui_CustomObjects.cpp  vgui_MOTDWindow.cpp  vgui_SchemeManager.cpp  vgui_SchemeManager.h  vgui_SchemeManager.hpp  vgui_ScorePanel.cpp  vgui_ScorePanel.h  vgui_ScorePanel.hpp  vgui_SpectatorPanel.cpp  vgui_SpectatorPanel.h  vgui_SpectatorPanel.hpp  vgui_TeamFortressViewport.cpp  vgui_TeamFortressViewport.h  vgui_TeamFortressViewport.hpp  vgui_int.cpp  vgui_int.h  vgui_teammenu.cpp
src/game/server/: CMakeLists.txt  UserMessages.cpp  UserMessages.h  activity.h  activity.hpp  client.cpp  decals.cpp  decals.hpp  entity_iteration.cpp  entity_iteration.hpp  extdll.h  extdll.hpp  globals.cpp  nodes.cpp  nodes.h  plane.cpp  plane.h  plane.hpp  server_precompiled.hpp  skill.cpp  skill.h  util.cpp  util.h  util.hpp  voice_gamemgr.cpp  voice_gamemgr.h  voice_gamemgr.hpp
src/game/server/entities/: CBaseAnimating.cpp  CBaseAnimating.hpp  CBaseDelay.hpp  CBaseEntity.cpp  CBaseEntity.hpp  CBaseToggle.cpp  CBaseToggle.hpp  CDelayedUse.cpp  CDelayedUse.hpp  CMakeLists.txt  CNullEntity.cpp  CNullEntity.hpp  CWorld.cpp  CWorld.hpp  EntityParser.cpp  EntityParser.hpp  animating.cpp  animation.cpp  animation.h  animation.hpp  animationevent.hpp  cbase.cpp  cbase.h  cbase.hpp  changelevel.cpp  changelevel.hpp  ehandle.cpp  ehandle.hpp  locksounds.cpp  locksounds.hpp  maprules.cpp  maprules.h  monsterevent.h  subs.cpp  triggers.cpp  triggers.hpp  world.cpp
src/game/server/entities/brush/: CBaseButton.hpp  CBaseCharger.cpp  CBaseCharger.hpp  CBreakable.cpp  CBreakable.hpp  CFuncMortarField.cpp  CFuncMortarField.hpp  CMortar.cpp  CMortar.hpp  CPushable.cpp  CPushable.hpp  bmodels.cpp  buttons.cpp  doors.cpp  doors.h  func_break.cpp  func_break.h  func_tank.cpp  h_battery.cpp  mortar.cpp  pathcorner.cpp  plats.cpp  trains.h
src/game/server/entities/changelevel/: CChangeLevel.cpp  CChangeLevel.hpp  CFireAndDie.cpp  CFireAndDie.hpp  CInfoLandmark.cpp  CInfoLandmark.hpp  CRevertSaved.cpp  CRevertSaved.hpp  CTriggerEndSection.cpp  CTriggerEndSection.hpp  CTriggerSave.cpp  CTriggerSave.hpp  CTriggerVolume.cpp  CTriggerVolume.hpp
src/game/server/entities/characters/: CBasePlayer.cpp  CBasePlayer.hpp  CBasePlayer.observer.cpp  CCorpse.cpp  CCorpse.hpp  CDeadHEV.cpp  CDeadHEV.hpp  corpse.cpp  corpse.hpp  observer.cpp  player.cpp  player.h  spectator.cpp  spectator.h
src/game/server/entities/items/: CAirtank.cpp  CAirtank.hpp  CHealthKit.cpp  CHealthKit.hpp  CItem.cpp  CItem.hpp  CItemAntidote.cpp  CItemAntidote.hpp  CItemBattery.cpp  items.cpp  (+7 more)
src/game/server/gamerules/: gamerules.cpp  gamerules.h  gamerules.hpp  mapcycle.cpp  mapcycle.hpp  multiplay_gamerules.cpp  singleplay_gamerules.cpp  teamplay_gamerules.cpp  teamplay_gamerules.h  teamplay_gamerules.hpp
src/game/server/navigation/: CAirNodeEnt.cpp  CAirNodeEnt.hpp  CNodeEnt.cpp  CNodeEnt.hpp  CNodeViewer.cpp  CNodeViewer.hpp  CTestHull.cpp  CTestHull.hpp  nodes.cpp  nodes.h  nodes_io.cpp  nodes_io.hpp
src/game/server/persistence/: globalstate.cpp  globalstate.hpp  saverestore.cpp  saverestore.hpp
src/game/server/server_interface/: CServerLibrary.cpp  CServerLibrary.hpp  client.cpp  client.h  client.hpp  consistency_t.hpp  dll_functions.cpp  dll_functions.hpp  enginecallback.h  enginecallback.hpp  game.cpp  game.h  server_interface.cpp  server_interface.hpp  server_t.hpp
src/game/server/sound/: sound_playback.cpp  sound_playback.hpp
src/game/shared/: CMakeLists.txt  cdll_dll.h  cdll_dll.hpp  filesystem_shared.cpp  filesystem_shared.hpp  materials.cpp  materials.hpp
src/game/shared/entities/: EntityDictionary.cpp  EntityDictionary.hpp  EntityList.cpp  EntityList.hpp  ehandle.cpp  ehandle.hpp
src/game/shared/metadata/: MetaDataUtils.hpp  TypeReflection.hpp
src/game/shared/persistence/: ISerializer.hpp  PersistenceDefs.hpp  Restore.cpp  Restore.hpp  Save.cpp  Save.hpp  SaveRestoreBuffer.cpp  SaveRestoreBuffer.hpp  SerializerRegistry.hpp  Serializers.cpp  Serializers.hpp  ValueVisitor.hpp
src/game/shared/player_movement/: pm_debug.cpp  pm_debug.h  pm_debug.hpp  pm_defs.h  pm_info.h  pm_math.cpp  pm_movevars.h  pm_shared.cpp  pm_shared.h  pm_shared.hpp
src/game/shared/shared_interface/: shared_interface.cpp  shared_interface.hpp
src/game/shared/sound/: materials.cpp  sentences.cpp  sentences.hpp
src/game/shared/utils/: BinaryReader.hpp  CStringPool.cpp  CStringPool.hpp  CTokenizer.cpp  CTokenizer.hpp  bitvec.h  shared_utils.cpp  shared_utils.hpp  string_utils.cpp  string_utils.hpp  view_utils.cpp  view_utils.hpp
(+818 files in other folders)
